--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "author": "Aras Pranckevicius",
+  "author": "Florian Barthel",
   "dependencies": { "com.unity.burst": "1.8.8", "com.unity.collections": "2.1.4", "com.unity.mathematics": "1.2.6" },
-  "description": "3D Gaussian Splatting rendering and tools",
-  "displayName": "Gaussian Splatting",
+  "description": "Lightweight 3D Gaussian Splatting rendering for Laptop setups",
+  "displayName": "Light Gaussian Splatting",
   "keywords": [ "unity" ],
   "license": "MIT",
   "name": "org.nesnausk.gaussian-splatting",
-  "repository": "github:aras-p/UnityGaussianSplatting",
-  "unity": "2022.3",
-  "unityRelease": "7f1",
+  "repository": "https://github.com/Florian-Barthel/3dgs_unity",
+  "unity": "6000.0",
+  "unityRelease": "32f1",
   "version": "1.1.1"
 }
